Mobile+Desktop: last setion before footer

--- a/index.html
+++ b/index.html
@@ -166,7 +166,8 @@
 
                         </div>
                         <h3 class="text-xl font-medium p-4">Managing Presentation Anxiety</h3>
-                        <p class="opacity-85 p-4">Communication Within the Curriculum Associate Director Sue Weber offers
+                        <p class="opacity-85 p-4">Communication Within the Curriculum Associate Director Sue Weber
+                            offers
                             tips and tricks to
                             control anxiety during public speaking. A Penn graduate student ID is required.</p>
                         <div class="absolute top-2 right-2 bg-white">
@@ -183,7 +184,8 @@
                         </div>
 
                         <h3 class="text-xl font-medium p-4">Historic Pennsylvania Hospital Tour</h3>
-                        <p class="opacity-85 p-4">Holman Biotech Commons hosts a public tour of Pennsylvania Hospital, the
+                        <p class="opacity-85 p-4">Holman Biotech Commons hosts a public tour of Pennsylvania Hospital,
+                            the
                             nation's first
                             hospital. Attendees will tour the Great Court, Historic Library, and Surgical Amphitheatre.
                             Registration is required.</p>
@@ -254,20 +256,21 @@
                 </div>
             </div>
         </div>
-        <div class="xl:bg-white bg-[#011F5B] text-white my-8">
+        <div class="xl:bg-white bg-[#011F5B] text-white my-8 mb-0">
             <div class="xl:bg-[#011F5B] xl:pb-80">
 
                 <div class="xl:max-w-xl xl:mx-auto   my-4">
                     <h2 class="xl:text-6xl xl:pt-16  text-center text-2xl py-8">Penn Priorities</h2>
                     <hr class="w-5 h-1 bg-gray-300 ml-auto mr-auto my-2">
-                    <p class="px-7 text-center">A look at a few of our big picture priorities that improve Penn as we create
+                    <p class="px-7 text-center">A look at a few of our big picture priorities that improve Penn as we
+                        create
                         knowledge to benefit the
                         world.</p>
                 </div>
             </div>
-            <div class="xl:bg-none xl:-translate-y-60 overflow-x-auto my-10">
+            <div class="xl:bg-none xl:-translate-y-40 overflow-x-auto my-10 mb-0">
                 <div class=" flex space-x-4 min-w-max px-2">
-                   
+
                     <div class="xl:max-w-xl max-w-72">
                         <a href="#">
                             <img src="images/covenant.jpeg" alt="">
@@ -314,69 +317,75 @@
                         </a>
                     </div>
                 </div>
-                <div class="bullet-span">
-                    <div>
-                        <span></span>
-                        <span></span>
-                        <span></span>
-                        <span></span>
-                        <span></span>
+            </div>
+            <div class="bullet-span">
+                <div>
+                    <span></span>
+                    <span></span>
+                    <span></span>
+                    <span></span>
+                    <span></span>
 
-                    </div>
                 </div>
             </div>
         </div>
 
-        <div>
+        <div class="xl:max-w-6xl xl:mx-auto">
             <div>
-                <h2>Stay Connected</h2>
+                <h1 class="text-center text-3xl text-[#011f5B] font-semibold">Stay Connected</h1>
             </div>
-            <hr>
-            <div>
-                <div class="bg-[url(images/art-matters-fantine-teaser.jpg)] bg-no-repeat bg-cover">
-                    <a href="#">
-                        <div>
-                            <p>In the lobby of Penn Vet’s Ryan Hospital, you will find a portrait of a golden retriever.
-                                Step closer, and you will discover a collage of nearly 500 photos of shelter dogs who
-                                received lifesaving care from Penn Vet.</p>
-                            <div>
-                                <img src="images/icon-instagram.svg" alt="instagram">
-                                <p>@UOFPENN</p>
-                            </div>
-                        </div>
-                    </a>
-                </div>
-                <div>
-                    <a href="#">
-                        <div>
-                            <p>
-                                Scott Hensley of Penn Medicine says, “The worst thing we can do is be flat-footed and
-                                unprepared, because this virus does represent a true pandemic risk.” Faculty members
-                                from @PennMedicine and @PennVetSchool are working on a new vaccine for the H5N1 virus.
-                                They are studying how the virus is transmitted and assisting the state in testing
-                                samples from birds and mammals.
-                            </p>
-                            <div>
-                                <img src="images/icon-twitter-white.svg" alt="twitter">
-                                <p>@PENN</p>
-                            </div>
-                        </div>
-                    </a>
-                </div>
-                <div class="bg-[url(images/penn_commonsspringsem2025-sq.png)] bg-no-repeat bg-cover">
-                    <a href="#">
-                        <div>
-                            <p>Bundled up and on the move</p>
-                            <div>
-                                <img src="images/icon-instagram-white.svg" alt="instagram">
-                                <p>@UOFPENN</p>
-                            </div>
-                        </div>
-                    </a>
-                </div>
+            <hr class="w-5 h-1 bg-gray-300 ml-auto mr-auto mt-2">
+            <div class=" overflow-x-auto my-10">
+                <div class="xl:mx-auto xl:max-w-5xl xl:justify-around flex space-x-4 min-w-max  px-2">
 
+                    <div class="xl:w-1/3  bg-[url(images/art-matters-fantine-teaser.jpg)] bg-no-repeat bg-cover bg-center w-52">
+                        <a href="#">
+                            <div >
+                                <p class="hidden">In the lobby of Penn Vet’s Ryan Hospital, you will find a portrait of a golden
+                                    retriever.
+                                    Step closer, and you will discover a collage of nearly 500 photos of shelter dogs
+                                    who
+                                    received lifesaving care from Penn Vet.</p>
+                                <div class="hidden">
+                                    <img src="images/icon-instagram.svg" alt="instagram">
+                                    <p>@UOFPENN</p>
+                                </div>
+                            </div>
+                        </a>
+                    </div>
+                    <div class=" xl:max-w-80 xl:py-4 xl:pr-8 xl:text-base max-w-52 bg-[#011f5B] text-white px-4 py-1 text-sm">
+                        <a href="#">
+                            <div>
+                                <p>
+                                    Scott Hensley of Penn Medicine says, “The worst thing we can do is be flat-footed
+                                    and
+                                    unprepared, because this virus does represent a true pandemic risk.” Faculty members
+                                    from @PennMedicine and @PennVetSchool are working on a new vaccine for the H5N1
+                                    virus.
+                                    They are studying how the virus is transmitted and assisting the state in testing
+                                    samples from birds and mammals.
+                                </p>
+                                <div>
+                                    <img src="images/icon-twitter-white.svg" alt="twitter" class="hidden">
+                                    <p>@PENN</p>
+                                </div>
+                            </div>
+                        </a>
+                    </div>
+                    <div class=" xl:w-1/3 bg-[url(images/penn_commonsspringsem2025-sq.png)] bg-no-repeat bg-cover bg-center w-52">
+                        <a href="#">
+                            <div>
+                                <p class="hidden">Bundled up and on the move</p>
+                                <div class="hidden">
+                                    <img src="images/icon-instagram-white.svg" alt="instagram">
+                                    <p>@UOFPENN</p>
+                                </div>
+                            </div>
+                        </a>
+                    </div>
+                </div>
             </div>
-            <div>
+            <div class="social">
 
                 <a href="#"><img src="images/icon-instagram.svg" alt="instagram"></a>
                 <a href="#"><img src="images/icon-facebook.svg" alt="facebook"></a>
